# python-project-base-setup

./: .dockerignore  Dockerfile  docker-compose.yml  lab1.ipynb  pyproject.toml  twims.ipynb
