[project]
name = "ml-env-try"
version = "0.1.0"
description = "ML Labs course"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "kagglehub==0.3.13",
    "matplotlib==3.10.7",
    "notebook==7.4.7",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "pingouin==0.5.5",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
]

[tool.uv]
required-version = "~=0.9.2"
add-bounds = "exact"
